--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
+}
+
+test {
+    useJUnitPlatform()
 }
 
 //export GRADLE_OPTS="-Dfile.encoding=utf-8"
